--- a/sources/myanmar-mz.bib
+++ b/sources/myanmar-mz.bib
@@ -1,24 +1,36 @@
 @techreport{Worl2012,
 abstract = {mz: overview of recent developments, risks..},
 author = {Bank, World},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2012 - Haggblade - world bank interim strategy report.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Bank - 2012 - International Development Assiciation and Imnternational Finance Corporation Interim Strategy Note for the Republic od the.pdf:pdf},
 pages = {1--33},
 title = {{International Development Assiciation and Imnternational Finance Corporation Interim Strategy Note for the Republic od the Union of Myanmar for the Period 2013-2014}},
 year = {2012}
 }
 @techreport{FAO2010,
 author = {FAO},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/MyanmarSecondaryData/sources/literature/2010 - FAO - Review of the present state of food and agricultural statistics in myanmar APCAS-10-11.doc:doc},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/FAO - 2010 - Review of the Present State of Food and Agricultural Statistic in Myanmar.doc:doc},
 institution = {FAO},
 pages = {1--26},
 title = {{Review of the Present State of Food and Agricultural Statistic in Myanmar}},
 url = {http://www.fao.org/fileadmin/templates/ess/documents/meetings{\_}and{\_}workshops/APCAS23/documents{\_}OCT10/APCAS-10-11{\_}-Myanmar{\_}Ctry{\_}report.doc},
 year = {2010}
 }
+@article{:/content/journals/10.1163/22134379-17101022,
+author = {Ferguson, Jane M},
+doi = {http://dx.doi.org/10.1163/22134379-17101022},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Ferguson - 2015 - Who's Counting.pdf:pdf},
+journal = {Bijdragen tot de taal-, land- en volkenkunde / Journal of the Humanities and Social Sciences of Southeast Asia},
+number = {1},
+pages = {1--28},
+title = {{Who's Counting?}},
+url = {http://booksandjournals.brillonline.com/content/journals/10.1163/22134379-17101022},
+volume = {171},
+year = {2015}
+}
 @techreport{Hagg2013,
 abstract = {Despite its enormous potential, Myanmar's agriculture has underperformed over the past fifty years. Today, per capita earnings in agriculture average roughly {\$}200 a year, one-half to onethird of the levels achieved by its regional peers. Given that two-thirds of the population works primarily in agriculture, low farm productivity translates into high rates of poverty and food insecurity. Currently, about one quarter of the population falls below the national poverty line. As a result, in spite of national rice self-sufficiency, food security for many households and individuals remains elusive. Poor households spend over 70{\%} of their income on food. In addition, fully one-third of rural households borrow at some point during the year in order to purchase food. Even after shouldering this heavy financial burden, up to one-half of rural households report having to navigate two months each year without adequate food supplies, leaving one-third of the country's children stunted. The discussion in this document aims to provide a menu of strategic options for improving agricultural performance under both Long Game and Short Game scenarios. For both, the report identifies early actions that will lay the foundation for a successful Long Game under which accelerated, broad-based agricultural growth contributes to faster national income growth, improved food security, and increased political stability going forward.},
 author = {Haggblade, Steven},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2013 - Haggblade - strategic agricultural sector usaid report.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Haggblade - 2013 - A Strategic Agricultural Sector and Food Security Diagnostic for Myanmar.pdf:pdf},
 institution = {USAID},
 pages = {1--99},
 title = {{A Strategic Agricultural Sector and Food Security Diagnostic for Myanmar}},
@@ -27,7 +39,7 @@ year = {2013}
 @article{Hagg2014,
 abstract = {Despite many transformations taking place in Myanmar, its agricultural sector is lagging. A high proportion of rural hosueholds remain poor and food insecure as a result. This article examines the underlying causes of poor agricultural performance through a combination of literature and secondary data review combined wiht extensive field interviews with a broad range of informants in the main agricultural zones of the country. We identify key structural changes that are needed to unleash smallholder-led agricultural transformation and broad-based rural economic growth.},
 author = {Haggblade, Steven and Boughton, Duncan and Cho, Khin Mar and Denning, Glenn},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2014 - Haggblade - strategic choices shaping agricultural preformance and food security in myanmar.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Haggblade et al. - 2014 - Strategic Choices Shaping Agricultural Performance and Food Security in Myanmar.pdf:pdf},
 journal = {Journal of International Affairs},
 number = {2},
 pages = {54--71},
@@ -38,19 +50,26 @@ year = {2014}
 @techreport{Help2014,
 abstract = {The Baseline Assessment was initiated in November 2013 and data collection for the baseline was conducted during November and December 2013. 513 households were conducted in 10 villages in Hpa-An township in Kayin state and 10 villages in Mawlamyine Township, Mon State. Formal household interviews utilized structured questionnaires as the main tool to collect data. Existing information (rapid assessment reports) were used as sources of information.},
 author = {International, Help Age},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2014 - HelpAgeInt - Myanmar Baseline Household Survey Report.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/International - 2014 - Stronger Myanmar NSAs to Promote Poverty Reduction in Old Age - Baseline Household Survey Report.pdf:pdf},
 keywords = {Data},
 mendeley-tags = {Data},
 pages = {1--22},
 title = {{Stronger Myanmar NSAs to Promote Poverty Reduction in Old Age - Baseline Household Survey Report}},
 year = {2014}
 }
+@misc{IRRI2016,
+abstract = {Onlinw Query Facility},
+author = {IRRI},
+title = {{World Rice Statistics}},
+url = {http://ricestat.irri.org:8080/wrsv3/entrypoint.htm},
+year = {2016}
+}
 @techreport{KNod2012,
 abstract = {Population ageing and the well-being of older persons are emerging as major challenges for families, communities and states in much of Asia. To respond effectively with appropriate policies and programmes, both government and non-government agencies need reliable and comprehensive information about the situation of the older population. HelpAge International therefore contracted Myanmar Survey Research to conduct the first comprehensive Survey of Older Persons in Myanmar in March and April 2012.* The survey interviewed 4,080 persons aged 60 and older and covered the entire country except Kachin State.},
 annote = {mz - 
 from kh 10.8.16},
 author = {Knodel, John},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2013 - Knodel et al - The Situation of Older Persons in Myanmar - results from the 2012 survey of older persons.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Knodel - 2013 - The Situation of Older Persons in Myanmar.pdf:pdf},
 institution = {Help Age International},
 pages = {1--126},
 title = {{The Situation of Older Persons in Myanmar}},
@@ -63,6 +82,14 @@ title = {{The 2014 Myanmar Population and Housing Census}},
 url = {http://www.themimu.info/census-data},
 year = {2014}
 }
+@techreport{RepM2014,
+address = {Nay Pyi Taw},
+author = {of Myanmar, Republic of teh Union},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Myanmar - 2014 - Ccensus Observation Mission Report 2014 Population Census and Houshing.pdf:pdf;:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Myanmar - 2014 - Ccensus Observation Mission Report 2014 Population Census and Houshing(2).pdf:pdf},
+institution = {Republic of the Union of Myanmar},
+title = {{Ccensus Observation Mission Report: 2014 Population Census and Houshing}},
+year = {2014}
+}
 @misc{Sein2010,
 abstract = {mz: Power point presentation},
 author = {Sein, U Aye Maung},
@@ -71,10 +98,45 @@ title = {{Rural Statistics from Agricultural Census (Based on Myanmar Census of 
 url = {http://documentslide.com/documents/1-rural-statistics-from-agricultural-census-based-on-myanmar-census-of-agriculture.html},
 year = {2010}
 }
+@article{doi:10.1080/17441730.2014.972084,
+author = {Spoorenberg, Thomas},
+doi = {10.1080/17441730.2014.972084},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Spoorenberg - 2015 - Provisional results of the 2014 census of Myanmar The surprise that wasn't.pdf:pdf},
+journal = {Asian Population Studies},
+number = {1},
+pages = {4--6},
+title = {{Provisional results of the 2014 census of Myanmar: The surprise that wasn't}},
+url = {http://dx.doi.org/10.1080/17441730.2014.972084},
+volume = {11},
+year = {2015}
+}
+@article{Sun2015,
+abstract = {Abstract Agent-based micro-simulation models require a complete list of agents with detailed demographic/socioeconomic information for the purpose of behavior modeling and simulation. This paper introduces a new alternative for population synthesis based on Bayesian networks. A Bayesian network is a graphical representation of a joint probability distribution, encoding probabilistic relationships among a set of variables in an efficient way. Similar to the previously developed probabilistic approach, in this paper, we consider the population synthesis problem to be the inference of a joint probability distribution. In this sense, the Bayesian network model becomes an efficient tool that allows us to compactly represent/reproduce the structure of the population system and preserve privacy and confidentiality in the meanwhile. We demonstrate and assess the performance of this approach in generating synthetic population for Singapore, by using the Household Interview Travel Survey (HITS) data as the known test population. Our results show that the introduced Bayesian network approach is powerful in characterizing the underlying joint distribution, and meanwhile the overfitting of data can be avoided as much as possible.},
+author = {Sun, Lijun and Erath, Alexander},
+doi = {http://dx.doi.org/10.1016/j.trc.2015.10.010},
+file = {:C$\backslash$:/Users/sfos0247/Dropbox/Literatura/2015 - Sun and Erath - A bayesian network approach for population synthesis.pdf:pdf},
+issn = {0968-090X},
+journal = {Transportation Research Part C: Emerging Technologies},
+keywords = {Agent-based model,Bayesian networks,Data-driven,Population synthesis},
+pages = {49--62},
+title = {{A Bayesian network approach for population synthesis}},
+url = {http://www.sciencedirect.com/science/article/pii/S0968090X15003599},
+volume = {61},
+year = {2015}
+}
+@misc{MIP2014,
+abstract = {pampflet explaining how census was conducted.},
+address = {Nay Pyi Taw},
+author = {wiht techinca support from UNFPA, Ministry of Immigration and Population},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/UNFPA - 2014 - The 2014 Population and Housing Census of Myanmar What is happening at the Census Office.pdf:pdf},
+title = {{The 2014 Population and Housing Census of Myanmar: What is happening at the Census Office}},
+url = {http://myanmar.unfpa.org/sites/asiapacific/files/Census{\_}Office{\_}ENG{\_}web.pdf},
+year = {2014}
+}
 @techreport{IHLC2010,
 abstract = {Several household surveys on various aspects of living conditions have been conducted in Myanmar in recent years. While each of these surveys offered valuable information on a specific area, none have enabled holistic perspective on the situation of households and individuals. In order to provide the country's first reliable integrated assessment of all major domains of living conditions, the United Nations Development Programme and Government of Myanmar have agreed on implementation of an Integrated Household Living Conditions Assessment (IHLCA) in 2003‐05. One of the main components is a two‐round quantitative household survey to be conducted in two different seasons, approximately six months apart, for compiling economic and social indicators representative at the national and state/division levels and for different population sub‐groups. At the onset of IHLCA project, IDEA International had identified data gaps and recommended survey design after reviewing the data collected and published via different existing sources. Based on these recommendations, appropriate survey design that enabled to fill up some of the data gaps was systematically developed in this IHLCA survey. The first IHLCA survey was able to provide a national poverty line for the first time in Myanmar and its related indicators as well as a number of MDG indicators. However, there remain additional indicators to be filled. As a continuation of the first IHLCA survey, the second survey was agreed to be launched in 2009‐2010 along the line of the first IHLCA survey with the objective of tracking changes in living conditions and poverty during the four years since 2005. Thus, it is imperative to identify indicators that need to be kept tracking on and those that required to be measured additionally. This report is thus conducted to give recommendations for the second IHLCA survey based on a systematic review of the data collected and published via the different existing sources, data gaps existed and filled by the first IHLCA survey. A large range of indicators that can readily be compiled through household‐based data exist for monitoring national and international goals for improving living conditions and reducing poverty. However, in Myanmar, wide discrepancies have often been observed for the same indicator over successive surveys, likely related to varying collection and analysis strategies. Even wider divergence has been observed across types of data sources, notably surveys versus routine administrative data.},
 author = {Unit, IHLCA project Technical},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/MyanmarSecondaryData/sources/literature/2010 - IHLCA Analysis of data sources and gaps for monitoring living conditions in Myanmar.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Unit - 2010 - Analysis of Data Sources and Gaps for monitoring living conditions in the Union of Myanmar.pdf:pdf},
 pages = {0--106},
 title = {{Analysis of Data Sources and Gaps for monitoring living conditions in the Union of Myanmar}},
 year = {2010}
@@ -95,30 +157,23 @@ Business activities Finance and savings
 Access not clear. 
 But a MDG report has around 40 tables on the main MDG indicators, most with 2005/2010 comparisons and several with sub-national disaggregation. Good documentation},
 author = {Unit, IHLCA project Technical},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/MyanmarSecondaryData/sources/literature/2011 - Integrated household living conditions in myanmar-MDG Data{\_}Complete Report.pdf:pdf},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Unit - 2011 - Integrated Household Living Conditions Survey in Myanmar 2009-2010 - MDG Data Report.pdf:pdf},
 keywords = {Data},
 mendeley-tags = {Data},
 pages = {1--80},
 title = {{Integrated Household Living Conditions Survey in Myanmar 2009-2010 - MDG Data Report}},
 year = {2011}
 }
-@techreport{Number2003,
-booktitle = {Main},
-file = {:C$\backslash$:/Users/sfos0247/Dropbox/analysis/Myanmar/sources/literature/2003 - FAO - Myanmar Agri Census Main Results Myanmar.pdf:pdf},
-institution = {FAO},
-title = {{MYANMAR - Agricultural Census 2003 - Main Results}},
-url = {http://www.fao.org/fileadmin/templates/ess/documents/world{\_}census{\_}of{\_}agriculture/main{\_}results{\_}by{\_}country/Myanmar{\_}2003F.pdf},
-year = {2003}
-}
-@misc{IRRI2016,
-abstract = {Onlinw Query Facility},
-author = {IRRI},
-title = {{World Rice Statistics}},
-url = {http://ricestat.irri.org:8080/wrsv3/entrypoint.htm},
-year = {2016}
-}
 @misc{UNPD2015,
 author = {UNPD},
 title = {{World Population Prospects}},
 year = {2015}
+}
+@techreport{Number2003,
+booktitle = {Main},
+file = {:C$\backslash$:/Users/sfos0247/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - 2003 - MYANMAR - Agricultural Census 2003 - Main Results.pdf:pdf},
+institution = {FAO},
+title = {{MYANMAR - Agricultural Census 2003 - Main Results}},
+url = {http://www.fao.org/fileadmin/templates/ess/documents/world{\_}census{\_}of{\_}agriculture/main{\_}results{\_}by{\_}country/Myanmar{\_}2003F.pdf},
+year = {2003}
 }
